--- a/src/style.css
+++ b/src/style.css
@@ -1,7 +1,7 @@
 .terminal {
     margin: 10px;
     padding: 10px;
-    height: 100%;
+    height: 100vh;
     width: 80%;
     font-family: sans-serif;
     background-color: #333d54;
